<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_blue"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_two_text"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bt_user_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/user_selector"
        android:gravity="bottom|center_horizontal" />

    <LinearLayout
        android:id="@+id/ll_mid_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/bt_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/map_selector"
            android:text="@string/map_text"
            android:textColor="@color/bt_background_unselected"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/map_selector"
            android:text="@string/distance_scan"
            android:textColor="@color/bt_background_unselected"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/ll_mid_btn"
        android:background="@color/bt_background_unselected"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2" >

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/bt_background_selected"
            android:contentDescription="@string/underLine"
            android:scaleType="matrix" />
    </LinearLayout>

    <com.chejiawang.android.studentclient.home.MapViewPager
        android:id="@+id/vp_select"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_line" />

</RelativeLayout>