<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/all_top" >

        <Button
            android:id="@+id/bt_user_info"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/top_left_user_normal" />

        <TextView
            android:id="@+id/logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/title_order_text"
            android:textColor="#fff"
            android:textSize="23sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_mid_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="0dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_rechange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/order_log"
            android:textColor="@color/bt_background_unselected"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_practice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/practice_log"
            android:textColor="@color/bt_background_unselected"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bt_background_unselected"
        android:orientation="horizontal"
        android:weightSum="2" >
        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/bt_background_selected"
            android:scaleType="matrix"
            android:contentDescription="@string/underLine" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_order"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

</LinearLayout>